--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,51 @@
               Ремонт коленчатых валов
             </p>
             <div class="services__hover">
+              <div class="services__hover-inner">
+                <div class="services__hover-img">
+                  <img src="images/1.jpg" alt="фото услуги">
+                </div>
+                <p class="services__hover-text">
+                  Выполняем все виды ремонта коленчатых валов легковых и грузовых автомобилей.
+                  <br>
+                  Шлифовка и полировка коленчатого вала длиной до 1400 мм.
+                  <br>
+                  Все работы выполняются квалифицированными специалистами на современном оборудовании, производится
+                  системный контроль работ, что гарантирует высокое качество выполняемых работ.
+                  <br>
+                  На все работы предоставляется официальная гарантия!
+                </p>
+              </div>
+              <ul class="services__hover-box">
+                <li>Шлифовка коленвалов
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+                <li>Правка (рихтовка) коленвалов
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+                <li>Восстановление коленвала
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+                <li>Замена сальника коленвала
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+                <li>Замена коленвала
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+                <li>Зашлифовка проблемной шейки
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+                <li>Восстановление шпоночного паза
+                  <span></span>
+                  <span>от 500 руб</span>
+                </li>
+              </ul>
 
             </div>
           </div>
@@ -187,11 +232,11 @@
           Вопросы и ответы
           <span>Часто задаваемые вопросы</span>
         </h2>
-        <ul class="faq__list">
+        <ul class="faq__list one">
 
           <li class="faq__item">
-            <p class="faq__question active">
-              Занимаетесь ли вы ремонтом двигателей автомобилей моей марки?
+            <p class="faq__question">
+              Занимаетесь ли вы ремонтом двигателей автомобиля моей марки?
             </p>
             <p class="faq__answer">
               Мы проводим ремонтные работы двигателей внутреннего сгорания большинства марок и моделей авто. Для того
@@ -213,7 +258,7 @@
 
           <li class="faq__item">
             <p class="faq__question">
-              Работаете ли вы с “физиками” или вы обслуживаете только юр. лиц?
+              Работаете ли вы с “физиками” или вы обслуживаете только юр. лица?
             </p>
             <p class="faq__answer">
               Мы проводим ремонтные работы двигателей внутреннего сгорания большинства марок и моделей авто. Для того
@@ -233,7 +278,7 @@
         </h2>
         <form class="consult__form" action="#">
           <input class="consult__name" type="text" placeholder="Как вас зовут?" required>
-          <input class="consult__phone" type="text" placeholder="Ваш номер телефона" required>
+          <input class="consult__phone" type="tel" placeholder="Ваш номер телефона" required>
           <p class="consult__comment">
             Ваши личные данные в безопасности!
           </p>
