first tryin laout

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,10 @@
         </div>
       </div>
     </div>
+
+    <a class="header__btn" href="#">
+      <img src="images/arrow-down.png" alt="кнопка вверх">
+    </a>
   </header>
 
   <main class="main">
